--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "inception-01",
   "version": "1.0.0",
   "description": "this is react tutorial",
-  "main": "App.js",
   "scripts": {
+    "start":"parcel index.html",
+    "build":"parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -16,5 +17,16 @@
     "frontend"
   ],
   "author": "Abhishek kumar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "browserslists":[
+    "last 2 versions"
+  ]
 }
